Fix overflow bug

--- a/src/components/experienceBox/ExperienceBox.css
+++ b/src/components/experienceBox/ExperienceBox.css
@@ -2,7 +2,8 @@
   color: #f8f7ff;
   font-family: 'Inter', sans-serif;
   width: 30vw;
-  height: 70vh;
+  min-height: 70vh;
+  height: fit-content;
   /* From https://css.glass */
   background: rgba(255, 255, 255, 0.2);
   border-radius: 16px;
