--- a/src/components/experienceEntry/ExperienceEntry.css
+++ b/src/components/experienceEntry/ExperienceEntry.css
@@ -1,5 +1,5 @@
 .experience-company {
-  font-size: 28px;
+  font-size: 25px;
   font-weight: 500;
   margin-left: 3%;
   margin-bottom: 0;
@@ -8,7 +8,7 @@
 
 .experience-role {
   margin: 0 3%;
-  font-size: 23px;
+  font-size: 20px;
   font-weight: 400;
 }
 
@@ -18,10 +18,11 @@
   margin-left: 7.5%;
   font-weight: 100;
   margin-bottom: 3%;
+  font-size: 18px;
 }
 
 .circle {
-  width: 10px;
+  width: 10px !important;
   height: 10px;
   background: #f8f7ff;
   border-radius: 50%;
@@ -48,14 +49,14 @@
 
 @media (max-width: 650px) {
   .experience-company {
-    font-size: 26px;
+    font-size: 25px;
     font-weight: 500;
     margin: 5% 0 0;
   }
 
   .experience-role {
     margin: 0 3%;
-    font-size: 3vw;
+    font-size: 20px;
     font-weight: 400;
   }
 
@@ -64,62 +65,6 @@
     margin-top: 1%;
     margin-left: 7.5%;
     font-weight: 100;
-  }
-
-  .circle {
-    width: 10px;
-    height: 10px;
-    background: #f8f7ff;
-    border-radius: 50%;
-    margin: 0 3%;
-  }
-
-  .line {
-    width: 1px;
-    height: 25px;
-    background: #f8f7ff;
-    margin-left: 3.8%;
-  }
-
-  .experience-role-and-circle {
-    display: flex;
-    align-items: center;
-    padding-top: 5%;
-  }
-
-  .experience-time-and-line {
-    display: flex;
-    margin-top: 3%;
-    padding-bottom: 5%;
-  }
-}
-
-@media (max-width: 600px) {
-  .experience-company {
-    font-size: 4vw;
-    font-weight: 500;
-    margin: 5% 0;
-  }
-
-  .experience-role {
-    margin: 0 3%;
-    font-size: 4vw;
-    font-weight: 400;
-  }
-
-  .experience-time {
-    margin: 0;
-    margin-top: 1%;
-    margin-left: 7.5%;
-    font-weight: 100;
-  }
-
-  .circle {
-    width: 10px;
-    height: 10px;
-    background: #f8f7ff;
-    border-radius: 50%;
-    margin: 0 3%;
   }
 
   .line {
